package vn.namnp.noteapp.common.testing

object ElementTestIdentifier {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
    const val ADD_NOTE = "ADD_NOTE"
    const val SORT_NOTE = "SORT_NOTE"
    const val SAVE_NOTE = "SAVE_NOTE"
}